Add user update email, name and password functionlity

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -22,6 +22,10 @@ a {
 }
 
 
+.alert-danger2 {
+    margin: 0 30px;
+    margin-top: 10px !important;
+}
 /* Full Container */
 .container-fluid {
     padding-right: 70px !important;
