--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -39,6 +39,21 @@ a {
     box-shadow: none;
     border: 1px solid #72bd2f;
 }
+#dm-country{
+    padding: 12px !important;
+}
+#dm-country:focus{
+ border: 1px solid #72bd2f !important;
+ box-shadow: none !important;
+}
+#dm-gender{
+    padding: 12px !important;
+}
+#dm-gender:focus{
+ border: 1px solid #72bd2f !important;
+ box-shadow: none !important;
+}
+
 
 /* Form Label */
 .form-floating>label {
@@ -57,6 +72,10 @@ a {
 .form-group>select:focus {
     box-shadow: none;
     border: 1px solid #72bd2f;
+}
+.form-control:focus {
+    border: 1px solid #72bd2f !important;
+    box-shadow: none !important;
 }
 
 /* Form Checkboxes */
