--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -5806,3 +5806,15 @@ a {
     font-weight: bold;
     padding-top: 40px;
 }
+
+/* new css  */
+.screening-features li{
+    position: relative;
+    padding-left: 30px;
+}
+.screening-features li::before{
+    content: url("http://mysight.test/wp-content/uploads/2025/05/check.png");
+    position: absolute;
+    left: 0;
+    top: -1px;
+}
