--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -39,19 +39,23 @@ a {
     box-shadow: none;
     border: 1px solid #72bd2f;
 }
-#dm-country{
+
+#dm-country {
     padding: 12px !important;
 }
-#dm-country:focus{
- border: 1px solid #72bd2f !important;
- box-shadow: none !important;
+
+#dm-country:focus {
+    border: 1px solid #72bd2f !important;
+    box-shadow: none !important;
 }
-#dm-gender{
+
+#dm-gender {
     padding: 12px !important;
 }
-#dm-gender:focus{
- border: 1px solid #72bd2f !important;
- box-shadow: none !important;
+
+#dm-gender:focus {
+    border: 1px solid #72bd2f !important;
+    box-shadow: none !important;
 }
 
 
@@ -73,6 +77,7 @@ a {
     box-shadow: none;
     border: 1px solid #72bd2f;
 }
+
 .form-control:focus {
     border: 1px solid #72bd2f !important;
     box-shadow: none !important;
@@ -927,14 +932,14 @@ a {
 }
 
 /* Carosuel Indicator */
-#carouselExampleIndicators  .carousel-indicators {
+#carouselExampleIndicators .carousel-indicators {
     position: relative;
     margin-top: 40px;
     margin-bottom: 0;
 }
 
 /* Carousel Dots */
-#carouselExampleIndicators  .carousel-indicators [data-bs-target] {
+#carouselExampleIndicators .carousel-indicators [data-bs-target] {
     transition: 0.3s ease;
     border-radius: 50%;
     background-color: #ccc;
@@ -946,7 +951,7 @@ a {
 }
 
 /* Carousel Dot Active */
-#carouselExampleIndicators  .carousel-indicators .active {
+#carouselExampleIndicators .carousel-indicators .active {
     background-color: #72bd2f;
 }
 
@@ -5255,6 +5260,7 @@ a {
 #divien-step-left1 .progress-bar .progress-fill {
     width: 20%;
 }
+
 /* STEP PROGRESS FILL ~ STEP TWO */
 #divien-step-left2 .progress-bar .progress-fill {
     width: 40%;
@@ -5716,7 +5722,7 @@ a {
 }
 
 /* TOOLTIP ARROW */
-.divine-steps-form  .slider.slider-horizontal .tooltip .arrow {
+.divine-steps-form .slider.slider-horizontal .tooltip .arrow {
     border-top-color: #fff;
     border-width: 7px;
     left: 50%;
@@ -5728,7 +5734,7 @@ a {
 }
 
 /* SLIDER TRACK */
-.divine-steps-form  .slider.slider-horizontal .slider-track {
+.divine-steps-form .slider.slider-horizontal .slider-track {
     height: 6px;
     cursor: default;
     background-color: #ccc;
@@ -5808,13 +5814,57 @@ a {
 }
 
 /* new css  */
-.screening-features li{
+.screening-features li {
     position: relative;
     padding-left: 30px;
 }
-.screening-features li::before{
+
+.screening-features li::before {
     content: url("http://mysight.test/wp-content/uploads/2025/05/check.png");
     position: absolute;
     left: 0;
     top: -1px;
+}
+
+.modal-checkbox-input input {
+    width: 18px;
+    height: 18px;
+    margin-top: 4px;
+    margin-bottom: 5px;
+}
+
+.modal-checkbox-input .form-check {
+    margin-bottom: 10px;
+}
+
+.review-request-wrapper .review-btn-group .btn.btn-primary.cancel-btn {
+    background-color: #fff;
+    color: #72bd2f;
+    margin-right: 10px;
+}
+
+.review-request-wrapper .review-btn-group .btn.btn-primary {
+    height: 50px;
+    border-radius: 5px;
+    width: 130px;
+}
+
+.Confirm-button-modal {
+    height: 50px !important;
+    border-radius: 5px !important;
+    margin-top: 20px;
+
+}
+
+.Thank-modal-content h3 {
+    font-size: 27px;
+    color: #777;
+    font-weight: bold;
+}
+.Thank-modal-content p{
+    font-size: 18px;
+    line-height: 30px;
+    font-weight: 500;
+    padding: 0;
+    margin: 0;
 }
